// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`MetricCard - Snapshot > should render metric card with centralized content 1`] = `
<div>
  <div
    class="rounded-xl border bg-card p-3 tablet:p-5 shadow-card hover:shadow-md transition-shadow"
  >
    <div
      class="flex items-start justify-between gap-2"
    >
      <div
        class="space-y-1 tablet:space-y-2 min-w-0 flex-1"
      >
        <p
          class="text-xs tablet:text-sm font-medium text-muted-foreground leading-tight"
        >
          Total de Alunos
        </p>
        <div
          class="flex items-baseline gap-1.5 flex-wrap"
        >
          <p
            class="text-xl tablet:text-2xl font-bold tracking-tight"
          >
            45
          </p>
        </div>
      </div>
      <div
        class="h-8 w-8 tablet:h-11 tablet:w-11 rounded-lg tablet:rounded-xl flex items-center justify-center shrink-0 bg-primary/10"
      >
        <svg
          class="h-4 w-4 tablet:h-5 tablet:w-5 text-primary"
          fill="currentColor"
          height="1em"
          viewBox="0 0 256 256"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M117.25,157.92a60,60,0,1,0-66.5,0A95.83,95.83,0,0,0,3.53,195.63a8,8,0,1,0,13.4,8.74,80,80,0,0,1,134.14,0,8,8,0,0,0,13.4-8.74A95.83,95.83,0,0,0,117.25,157.92ZM40,108a44,44,0,1,1,44,44A44.05,44.05,0,0,1,40,108Zm210.14,98.7a8,8,0,0,1-11.07-2.33A79.83,79.83,0,0,0,172,168a8,8,0,0,1,0-16,44,44,0,1,0-16.34-84.87,8,8,0,1,1-5.94-14.85,60,60,0,0,1,55.53,105.64,95.83,95.83,0,0,1,47.22,37.71A8,8,0,0,1,250.14,206.7Z"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`MetricCard - Snapshot > should render metric card with downward trend 1`] = `
<div>
  <div
    class="rounded-xl border bg-card p-3 tablet:p-5 shadow-card hover:shadow-md transition-shadow"
  >
    <div
      class="flex items-start justify-between gap-2"
    >
      <div
        class="space-y-1 tablet:space-y-2 min-w-0 flex-1"
      >
        <p
          class="text-xs tablet:text-sm font-medium text-muted-foreground leading-tight"
        >
          Cancelamentos
        </p>
        <div
          class="flex items-baseline gap-1.5 flex-wrap"
        >
          <p
            class="text-xl tablet:text-2xl font-bold tracking-tight"
          >
            3
          </p>
        </div>
      </div>
      <div
        class="h-8 w-8 tablet:h-11 tablet:w-11 rounded-lg tablet:rounded-xl flex items-center justify-center shrink-0 bg-primary/10"
      >
        <svg
          class="h-4 w-4 tablet:h-5 tablet:w-5 text-primary"
          fill="currentColor"
          height="1em"
          viewBox="0 0 256 256"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M117.25,157.92a60,60,0,1,0-66.5,0A95.83,95.83,0,0,0,3.53,195.63a8,8,0,1,0,13.4,8.74,80,80,0,0,1,134.14,0,8,8,0,0,0,13.4-8.74A95.83,95.83,0,0,0,117.25,157.92ZM40,108a44,44,0,1,1,44,44A44.05,44.05,0,0,1,40,108Zm210.14,98.7a8,8,0,0,1-11.07-2.33A79.83,79.83,0,0,0,172,168a8,8,0,0,1,0-16,44,44,0,1,0-16.34-84.87,8,8,0,1,1-5.94-14.85,60,60,0,0,1,55.53,105.64,95.83,95.83,0,0,1,47.22,37.71A8,8,0,0,1,250.14,206.7Z"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`MetricCard - Snapshot > should render metric card without trend 1`] = `
<div>
  <div
    class="rounded-xl border bg-card p-3 tablet:p-5 shadow-card hover:shadow-md transition-shadow"
  >
    <div
      class="flex items-start justify-between gap-2"
    >
      <div
        class="space-y-1 tablet:space-y-2 min-w-0 flex-1"
      >
        <p
          class="text-xs tablet:text-sm font-medium text-muted-foreground leading-tight"
        >
          Receita
        </p>
        <div
          class="flex items-baseline gap-1.5 flex-wrap"
        >
          <p
            class="text-xl tablet:text-2xl font-bold tracking-tight"
          >
            15000
          </p>
        </div>
      </div>
      <div
        class="h-8 w-8 tablet:h-11 tablet:w-11 rounded-lg tablet:rounded-xl flex items-center justify-center shrink-0 bg-primary/10"
      >
        <svg
          class="h-4 w-4 tablet:h-5 tablet:w-5 text-primary"
          fill="currentColor"
          height="1em"
          viewBox="0 0 256 256"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M117.25,157.92a60,60,0,1,0-66.5,0A95.83,95.83,0,0,0,3.53,195.63a8,8,0,1,0,13.4,8.74,80,80,0,0,1,134.14,0,8,8,0,0,0,13.4-8.74A95.83,95.83,0,0,0,117.25,157.92ZM40,108a44,44,0,1,1,44,44A44.05,44.05,0,0,1,40,108Zm210.14,98.7a8,8,0,0,1-11.07-2.33A79.83,79.83,0,0,0,172,168a8,8,0,0,1,0-16,44,44,0,1,0-16.34-84.87,8,8,0,1,1-5.94-14.85,60,60,0,0,1,55.53,105.64,95.83,95.83,0,0,1,47.22,37.71A8,8,0,0,1,250.14,206.7Z"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;
